--- a/index.html
+++ b/index.html
@@ -28,11 +28,29 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <button class="hidden md:block h-full rounded-xl border border-white w-12 hover:text-yellow">
-                    <i class="fas fa-moon "></i>
+                    <i class="fas fa-sun "></i>
                 </button>
             </nav>
         </section>
-        <section id="hero" class="px-8 py-4">
+        <section id="hero" class="my-8 px-8 h-1/2">
+            <div class="flex items-center justify-evenly h-full flex-col md:flex-row">
+                <div class="w-full md:w-1/2 h-1/2">
+                    <div class="flex flex-col items-start justify-evenly h-full">
+                        <h1 class=" text-3xl font-bold">Hi, I'm <span class="text-red">Brian</span></h1>
+                        <h2 class=" text-xl font-bold">I'm a Full Stack Web Developer from Nairobi</h2>
+                        <button class="rounded-xl border border-white text-yellow h-12 w-24">
+                            <span class="font-bold">B.</i></span>
+                        </button>
+
+                    </div>
+
+                </div>
+                <div class="hidden md:flex  md:flex-grow">
+                    <img src="./assets/kakashi.png" alt="hero" class="w-full h-full">
+                </div>
+            </div>
+        </section>
+        <section id="projects" class="projects">
 
         </section>
     </main>
