--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -13,9 +13,9 @@
 </head>
 
 <body class="bg-dark text-white">
-    <main class="px-4 lg:px-12 block">
+    <main class="px-4 lg:px-12 ">
         <section id="header">
-            <nav class="flex justify-between h-14 w-100 pt-4 items-center">
+            <nav class="flex justify-between h-14 w-full pt-4 items-center ">
                 <button class="rounded-xl h-full border border-white text-dark bg-white w-12">
                     <span class="font-bold">B.</i>
                 </button>
@@ -38,8 +38,8 @@
                     <div class="flex flex-col items-start justify-evenly h-full">
                         <h1 class=" text-3xl font-bold">Hi, I'm <span class="text-red">Brian</span></h1>
                         <h2 class=" text-xl font-bold">I'm a Full Stack Web Developer from Nairobi</h2>
-                        <button class="rounded-xl border border-white text-yellow h-12 w-24">
-                            <span class="font-bold">B.</i></span>
+                        <button class="rounded-xl border border-white text-yellow h-20 sm:h-12 w-32">
+                            <span class="font-bold">Download CV</i></span>
                         </button>
 
                     </div>
@@ -50,8 +50,30 @@
                 </div>
             </div>
         </section>
-        <section id="projects" class="projects">
+        <section id="projects" class="projects h-1/2 px-8 py-4">
+            <div class="title flex w-full justify-end">
+                <h1 class="text-4xl font-bold text-gray-500">&lt;Projects&gt;
+                </h1>
+            </div>
+            <div class="flex flex-col md:flex-row h-3/4 w-full justify-between ">
+                <div class="h-full w-full md:w-3/4 bg-gray-800">
+                    <img class="inherit" src="./assets/kakashi.png">
+                </div>
+                <div class="h-full w-full md:w-1/4  flex flex-row md:flex-col">
+                    <div class="h-full md:h-1/2 w-1/2 md:w-full md:pb-1 md:pl-1 pr-0.5 pt-1 md:pt-0">
+                        <div class="bg-gray-700 h-full">
+                            <img class="inherit" src="./assets/kakashi.png">
+                        </div>
+                    </div>
+                    <div class="h-full md:h-1/2 w-1/2 md:w-full md:pt-1 md:pl-1 pl-0.5 pt-1 md:pt-0">
+                        <div class="bg-gray-500 h-full">
+                            <img class="inherit" src="./assets/kakashi.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            </div>
         </section>
     </main>
 
