fix:project-section - fixed image overflow in projects section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-dark text-white">
     <main class="px-4 lg:px-12 ">
         <section id="header">
-            <nav class="flex justify-between h-14 w-full pt-4 items-center ">
+            <nav class="flex justify-between h-14 w-full pt-4 items-center">
                 <button class="rounded-xl h-full border border-white text-dark bg-white w-12">
                     <span class="font-bold">B.</i>
                 </button>
@@ -45,8 +45,8 @@
                     </div>
 
                 </div>
-                <div class="hidden md:flex  md:flex-grow">
-                    <img src="./assets/kakashi.png" alt="hero" class="w-full h-full">
+                <div class="hidden md:flex h-full justify-center items-center md:w-1/2">
+                    <img src="./assets/kakashi.png" alt="hero" class="h-3/4">
                 </div>
             </div>
         </section>
@@ -56,18 +56,19 @@
                 </h1>
             </div>
             <div class="flex flex-col md:flex-row h-3/4 w-full justify-between ">
-                <div class="h-full w-full md:w-3/4 bg-gray-800">
-                    <img class="inherit" src="./assets/kakashi.png">
+                <div class="h-full w-full flex justify-center items-center md:w-3/4 bg-gray-800">
+                    <img class="inherit h-1/2" src="./assets/kakashi.png">
                 </div>
                 <div class="h-full w-full md:w-1/4  flex flex-row md:flex-col">
                     <div class="h-full md:h-1/2 w-1/2 md:w-full md:pb-1 md:pl-1 pr-0.5 pt-1 md:pt-0">
-                        <div class="bg-gray-700 h-full">
-                            <img class="inherit" src="./assets/kakashi.png">
+                        <div class="flex justify-center items-center bg-gray-700 h-full">
+                            <img class="h-1/2" src="./assets/kakashi.png">
                         </div>
                     </div>
-                    <div class="h-full md:h-1/2 w-1/2 md:w-full md:pt-1 md:pl-1 pl-0.5 pt-1 md:pt-0">
-                        <div class="bg-gray-500 h-full">
-                            <img class="inherit" src="./assets/kakashi.png">
+                    <div
+                        class="h-full md:h-1/2 w-1/2 md:w-full md:h-1/2 w-1/2 md:w-full md:pt-1 md:pl-1 pl-0.5 pt-1 md:pt-0">
+                        <div class="flex justify-center items-center bg-gray-500 h-full">
+                            <img class="h-1/2" src="./assets/kakashi.png">
                         </div>
                     </div>
                 </div>
