feat:section - implemented about me section

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="flex items-center justify-evenly h-full flex-col md:flex-row">
                 <div class="w-full md:w-1/2 h-1/2">
                     <div class="flex flex-col items-start justify-evenly h-full">
-                        <h1 class=" text-3xl font-bold">Hi, I'm <span class="text-red">Brian</span></h1>
-                        <h2 class=" text-xl font-bold">I'm a Full Stack Web Developer from Nairobi</h2>
+                        <h1 class=" text-3xl font-bold">Hi, I'm <span class="text-red">Brian</span> I'm a Full Stack Web Developer from Nairobi</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id odit nisi quo asperiores possimus pariatur architecto aperiam soluta natus sint sequi officiis magni tempore mollitia maiores, maxime ea sit nihil.</p>
                         <button class="rounded-xl border border-white text-yellow h-20 sm:h-12 w-32">
                             <span class="font-bold">Download CV</i></span>
                         </button>
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </section>
-        <section id="projects" class="projects h-1/2 px-8 py-4">
+        <section id="skills" class="projects md:h-1/2 px-8 py-4">
             <div class="title flex w-full justify-end">
                 <h1 class="text-4xl font-bold text-gray-500">&lt;Projects&gt;
                 </h1>
@@ -76,6 +76,26 @@
 
             </div>
         </section>
+        <section id="about" class="h-1/4 px-8 py-4">
+            <div class="title flex w-full justify-center">
+                <h1 class="text-4xl font-bold text-gray-500">&lt;About Me&gt;
+                </h1>
+            </div>
+            <div class="mt-4 flex flex-col items-center md:flex-row w-full">
+                <div class="flex flex-col w-full md:w-1/4">
+                    <h1 class="text-4xl font-bold dark:text-white">My<br> Biography
+                    </h1>
+                    <button class="mt-8 rounded-xl border border-white text-yellow h-20 sm:h-12 w-32">
+                        <span class="font-bold">Download CV</i></span>
+                    </button>
+
+                </div>
+                <div class="md:pl-8 h-full">
+                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. A eligendi cum dolor officiis voluptatem suscipit corrupti impedit odit? Atque placeat ratione eum amet reprehenderit, architecto quasi sequi. Accusamus sunt provident itaque iste repellat quaerat saepe, sit atque dignissimos ratione corporis.</p>
+                 </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="./js/tailwind.config.js"></script>
