feat:section-skills - implemented the skills section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </section>
-        <section id="skills" class="projects md:h-1/2 px-8 py-4">
+        <section id="projects" class="projects md:h-1/2 px-8 py-4">
             <div class="title flex w-full justify-end">
                 <h1 class="text-4xl font-bold text-gray-500">&lt;Projects&gt;
                 </h1>
@@ -76,7 +76,7 @@
 
             </div>
         </section>
-        <section id="about" class="h-1/4 px-8 py-4">
+        <section id="about" class=" px-8 py-4">
             <div class="title flex w-full justify-center">
                 <h1 class="text-4xl font-bold text-gray-500">&lt;About Me&gt;
                 </h1>
@@ -95,6 +95,35 @@
                  </div>
             </div>
         </section>
+
+        <section id="skills" class=" px-8 py-4">
+            <div class="flex flex-col items-center md:flex-row w-full justify-around">
+                <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
+                   <div class="flex flex-col items-center justify-around h-full w-full  bg-red">
+                        <img class="h-1/3" src="./assets/kakashi.png">
+                        <h1 class="text-4xl font-bold text-white">Typescript</h1>
+                        <p class="text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                   
+                   </div>
+                </div>
+                <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
+                    <div class="flex flex-col items-center justify-around h-full w-full  bg-white">
+                        <img class="h-1/3" src="./assets/kakashi.png">
+                        <h1 class="text-4xl text-dark font-bold ">Flutter</h1>
+                        <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                    </div>
+                </div>
+                <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
+                    <div class="flex flex-col items-center justify-around h-full w-full  bg-white">
+                        <img class="h-1/3" src="./assets/kakashi.png">
+                        <h1 class="text-4xl text-dark font-bold ">React</h1>
+                        <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                   
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
