feat:theme - started on theming the portfolio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Brian Omondi - Portfolio</title>
 </head>
@@ -37,9 +40,9 @@
             <div class="flex items-center justify-evenly h-full flex-col md:flex-row">
                 <div class="w-full md:w-1/2 h-1/2">
                     <div class="flex flex-col items-start justify-evenly h-full">
-                        <h1 class=" text-3xl font-bold">Hi, I'm <span class="text-red">Brian</span> I'm a Full Stack Web Developer from Nairobi</h1>
+                        <h1 class="animate__bounceInLeft text-3xl font-bold">Hi, I'm <span class="text-red">Brian</span> I'm a Full Stack Web Developer from Nairobi</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id odit nisi quo asperiores possimus pariatur architecto aperiam soluta natus sint sequi officiis magni tempore mollitia maiores, maxime ea sit nihil.</p>
-                        <button class="rounded-xl border border-white text-yellow h-20 sm:h-12 w-32">
+                        <button class=" rounded-xl border border-white text-yellow h-20 sm:h-12 w-32">
                             <span class="font-bold">Download CV</i></span>
                         </button>
 
