fix:theme - set and change theme dynamically

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <title>Brian Omondi - Portfolio</title>
 </head>
 
-<body class="bg-dark text-white" id="body">
+<body class="bg-white dark:bg-black dark:text-white">
     <main class="px-4 lg:px-12 ">
         <section id="header">
             <nav class="flex justify-between h-14 w-full pt-4 items-center">
