--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <button onclick="changeTheme()" class="hidden md:block h-full rounded-xl border border-white w-12 hover:text-yellow">
-                    <i class="fas fa-sun "></i>
+                    <i class="fas fa-sun" id="theme-icon"></i>
                 </button>
             </nav>
         </section>
@@ -60,12 +60,12 @@
                 </h1>
             </div>
             <div class="flex flex-col md:flex-row h-3/4 w-full justify-between ">
-                <div class="h-full w-full flex justify-center items-center md:w-3/4 bg-gray-800">
+                <div class="shadow-lg h-full w-full flex justify-center items-center md:w-3/4 bg-gray-200 dark:bg-gray-800">
                     <img class="inherit h-1/2" src="./assets/kakashi.png">
                 </div>
                 <div class="h-full w-full md:w-1/4  flex flex-row md:flex-col">
                     <div class="h-full md:h-1/2 w-1/2 md:w-full md:pb-1 md:pl-1 pr-0.5 pt-1 md:pt-0">
-                        <div class="flex justify-center items-center bg-gray-700 h-full">
+                        <div class="flex justify-center items-center bg-gray-300 dark:bg-gray-700 h-full">
                             <img class="h-1/2" src="./assets/kakashi.png">
                         </div>
                     </div>
@@ -100,10 +100,10 @@
             </div>
         </section>
 
-        <section id="skills" class=" px-8 py-4">
+        <section id="skills" class="my-12 px-8 py-4">
             <div class="flex flex-col items-center md:flex-row w-full justify-around">
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
-                   <div class="flex flex-col items-center justify-around h-full w-full  bg-red">
+                   <div class="shadow-xl flex flex-col items-center justify-around h-full w-full  bg-red">
                         <img class="h-1/3" src="./assets/kakashi.png">
                         <h1 class="text-4xl font-bold text-white">Typescript</h1>
                         <p class="text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
@@ -111,19 +111,40 @@
                    </div>
                 </div>
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
-                    <div class="flex flex-col items-center justify-around h-full w-full  bg-white">
+                    <div class="shadow-xl flex flex-col items-center justify-around h-full w-full  bg-white">
                         <img class="h-1/3" src="./assets/kakashi.png">
                         <h1 class="text-4xl text-dark font-bold ">Flutter</h1>
                         <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
                     </div>
                 </div>
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
-                    <div class="flex flex-col items-center justify-around h-full w-full  bg-white">
+                    <div class=" shadow-xl flex flex-col items-center justify-around h-full w-full  bg-white">
                         <img class="h-1/3" src="./assets/kakashi.png">
                         <h1 class="text-4xl text-dark font-bold ">React</h1>
                         <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
                    
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contacts" class="my-12 px-8">
+            <div class="flex w-full justify-start">
+                <h1 class="text-4xl font-bold text-gray-500">&lt;Contacts&gt;
+                </h1>
+            </div>
+            <div class="flex flex-col md:flex-row w-full space-x-4">
+                <div class="flex flex-col justify-start items-center">
+                    <div class="font-bold text-2xl">Hire me <br> For your Next Project</div>
+                    <div class="flex w-1/2 icons justify-evenly ">
+                        <i class="fab fa-facebook text-gray-200"></i>
+                        <i class="fab fa-instagram text-gray-200"></i>
+                        <i class="fab fa-twitter text-red"></i>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center flex-grow border-l-2 border-red shadow-inner-lg bg-white">
+                    <div class="text-2xl font-bold text-dark">Contact Form</div>
+                    <input class="input rounded-lg border-gray-800" placeholder="Name">
                 </div>
             </div>
         </section>
@@ -137,12 +158,8 @@
             <button class="rounded-xl h-1/2 border border-dark  bg-white w-12">
                 <span class="font-bold">B.</i>
             </button>
-            <div class="flex w-1/2 icons justify-evenly">
-                <i class="fab fa-facebook "></i>
-                <i class="fab fa-instagram "></i>
-                <i class="fab fa-twitter text-red"></i>
-            </div>
-            <div class="hidden md:block font-bold text-center">Designed with <i class="fas fa-love"></i><br> by Bryan Omondi</div>
+            
+            <div class="hidden md:block font-bold text-center">Designed with <i class="fas fa-heart text-red"></i><br> by Bryan Omondi</div>
         </div>
     </footer>
 
