--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="flex flex-col items-center md:flex-row w-full justify-around">
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
                    <div class="shadow-xl flex flex-col items-center justify-around h-full w-full  bg-red">
-                        <img class="h-1/3" src="./assets/kakashi.png">
+                        <img class="h-1/3" src="./assets/ts.png">
                         <h1 class="text-4xl font-bold text-white">Typescript</h1>
                         <p class="text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
                    
@@ -88,14 +88,14 @@
                 </div>
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
                     <div class="shadow-xl flex flex-col items-center justify-around h-full w-full  bg-white">
-                        <img class="h-1/3" src="./assets/kakashi.png">
+                        <img class="h-1/3" src="./assets/flutter.png">
                         <h1 class="text-4xl text-dark font-bold ">Flutter</h1>
                         <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
                     </div>
                 </div>
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
                     <div class=" shadow-xl flex flex-col items-center justify-around h-full w-full  bg-white">
-                        <img class="h-1/3" src="./assets/kakashi.png">
+                        <img class="h-1/3" src="./assets/react.png">
                         <h1 class="text-4xl text-dark font-bold ">React</h1>
                         <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
                    
