--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <span class="font-bold">B.</i>
                 </button>
                 <div class="hidden md:flex w-1/2 justify-evenly">
-                    <a href="#about">About</a>
+                    <a href="#about" class="underline underline-offset-8 underline-red">About</a>
                     <a href="#projects">Projects</a>
-                    <a href="#contact">Contact</a>
+                    <a href="#contacts">Contact</a>
                 </div>
                 <button class="md:hidden rounded-xl h-full border border-white w-12">
                     <i class="fas fa-bars"></i>
