--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
                     </button>
 
                 </div>
-                <div class="h-full flex flex-col">
+                <div class="h-full flex flex-col space-y-4">
                     <div class="text-2xl font-bold">
                         Education
                     </div>
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. A eligendi cum dolor officiis voluptatem suscipit corrupti impedit odit? Atque placeat ratione eum amet reprehenderit, architecto quasi sequi. Accusamus sunt provident itaque iste repellat quaerat saepe, sit atque dignissimos ratione corporis.</p>
-                 </div>
+                    <p class="text-justify">Bachelor's Degree in Applied Physics and Computer Science from Multimedia University of Kenya</p>
+                <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur cum sit perferendis aperiam suscipit architecto tenetur praesentium omnis! Officia accusamus odio corrupti, velit voluptatum optio architecto! Corrupti, id nam.</p> 
+                </div>
             </div>
         </section>
         <section id="skills" class="my-12 px-8 py-4">
@@ -82,7 +83,7 @@
                    <div class="shadow-xl flex flex-col items-center justify-around h-full w-full  bg-red">
                         <img class="h-1/3" src="./assets/ts.png">
                         <h1 class="text-4xl font-bold text-white">Typescript</h1>
-                        <p class="text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                        <p class="text-center px-4">4 years experience </p>
                    
                    </div>
                 </div>
@@ -90,14 +91,14 @@
                     <div class="shadow-xl flex flex-col items-center justify-around h-full w-full  bg-white">
                         <img class="h-1/3" src="./assets/flutter.png">
                         <h1 class="text-4xl text-dark font-bold ">Flutter</h1>
-                        <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                        <p class="text-dark text-center px-4">2 years experience </p>
                     </div>
                 </div>
                 <div class="w-2/3 md:w-1/3  h-56 px-2 py-1">
                     <div class=" shadow-xl flex flex-col items-center justify-around h-full w-full  bg-white">
                         <img class="h-1/3" src="./assets/react.png">
                         <h1 class="text-4xl text-dark font-bold ">React</h1>
-                        <p class="text-dark text-center px-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                        <p class="text-dark text-center px-4">2 years experience </p>
                    
                     </div>
                 </div>
