fix:descriptions - added project list descriptions

--- a/index.html
+++ b/index.html
@@ -139,9 +139,12 @@
                        <a class="no-underline" href="https://github.com/bryanbill/burgers">
                         <div class="flex flex-col justify-evenly items-center bg-gray-300 dark:bg-gray-700 h-full">
                             <img class="h-1/2" src="./assets/burger.png">
-                            <div class="text-xl font-bold">
-                                Burger Place
+                            <div class="text-xl text-center font-bold">
+                                Burger Place 
                                 </div>
+                                <div class="text-gray-500">
+                                    HTML, CSS
+                                    </div>
                         </div>
                        </a>
                        
@@ -154,6 +157,9 @@
                                 <div class="text-xl font-bold">
                                   Showtime
                                     </div>
+                                    <div class="text-gray-500">
+                                        Vue, NodeJs
+                                        </div>
                             </div>
                            </a>
                     </div>
